<resources>
    <string name="app_name">DW - Pengingat Minum Obat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username</string>
    <string name="nav_header_subtitle">username@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Beranda</string>
    <string name="menu_tambah_jadwal">Tambah Jadwal</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_logout">Logout</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="login_untuk_melanjutkan">Login untuk melanjutkan</string>
    <string name="username">Username</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="register_untuk_melanjutkan_login">Register untuk melanjutkan Login</string>
    <string name="email">Email</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="batal">Batal</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="silahkan_masukkan_email_untuk_melakukan_reset_password">Silahkan masukkan Email untuk melakukan Reset Password</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="silahkan_masukan_kata_sandi_baru_anda">Silahkan masukan kata sandi baru Anda!</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="jumlah_obat">Jumlah Obat</string>
    <string name="keterangan">Keterangan</string>
    <string name="aturan_minum">Aturan Minum</string>
    <string name="pilih_tanggal_mulai">Pilih Tanggal Mulai</string>
    <string name="pilih_hari_minum">Pilih Hari Minum</string>
    <string name="pilih_waktu_minum">Pilih Waktu Minum</string>
    <string name="unggah_foto_obat">Unggah Foto Obat</string>
    <string name="silahkan_pilih_hari">Silahkan pilih hari</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>
    <string name="pilih_jenis_obat">Pilih Dosis</string>
    <string name="satusehari">1x sehari</string>
    <string name="duasehari">2x Sehari</string>
    <string name="tigasehari">3x Sehari</string>
    <string name="salep">Salep</string>
    <string name="satuanTablet">Biji</string>
    <string name="satuanSirup">ML</string>
    <string name="satuanSuntik">Suntikan</string>
    <string name="satuanSalep">Gram</string>
    <string name="masukan_jumlah_obat">Masukan Jumlah Obat</string>
    <string name="contoh_12">Contoh: 12</string>
    <string name="contoh_2">Contoh: 2</string>
    <string name="peringatan_isi_ulang">Peringatan Isi Ulang</string>
    <string name="masukkan_jumlah_peringatan_isi_ulang">Masukkan Batas Peringatan</string>
    <string name="masukan_keterangan">Masukan Keterangan</string>
    <string name="contoh_obat_ini_bikin_ngantuk">Contoh: Obat ini bikin ngantuk!</string>
    <string name="masukan_nama_obat">Masukan Nama Obat</string>
    <string name="contoh_panadol">Contoh: Panadol</string>
    <string name="pilih_jadwal_waktu_minum">Pilih Jadwal Waktu Minum</string>
    <string name="panadol">Panadol</string>
    <string name="senin_rabu_jumat_minggu">Senin, Rabu, Jumat, Minggu</string>
    <string name="_08_00">08:00</string>
    <string name="sesudah_makan">Sesudah Makan</string>
    <string name="status_sisa">Sisa Obat:</string>
    <string name="belum_diminum">Belum diminum</string>
    <string name="sudah_diminum">Sudah diminum</string>
    <string name="tidak_diminum">Tidak diminum</string>
    <string name="slash">/</string>
    <string name="_10_tablet">10 Tablet</string>
    <string name="_1_pill">1 Pill</string>
    <string name="tambah_jam">Tambah Jam</string>
    <string name="obat_diminum_pada_saat">Obat Diminum pada Saat</string>
    <string name="sebelum_makan">Sebelum Makan</string>
    <string name="bersamaan_dengan_makan">Bersamaan dengan Makan</string>
    <string name="lainnya">Lainnya</string>
    <string name="masukan_aturan_minum">Masukan Aturan Minum</string>
    <string name="contoh_sebelum_tidur">Contoh: Sebelum Tidur</string>
    <string name="tindakan">Tindakan</string>
    <string name="hapus">Hapus</string>
    <string name="edit">Ubah</string>
    <string name="select_method">Pilih Metode</string>
    <string name="image_capture">Ambil Foto</string>
    <string name="select_image">Pilih Foto</string>
    <string name="failure">Kesalahan</string>
    <string name="save">Simpan</string>
    <string name="set_time">Pilih waktu</string>
    <string name="tunda">Tunda</string>
    <string name="minum">Minum</string>
    <string name="abaikan">Abaikan</string>
    <string name="apakah_yang_akan_dilakukan">Apakah yang akan dilakukan?</string>
</resources>
