<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_username"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_NumberPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="66dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/username"
                android:ems="10"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/edt_password"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pwd_img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_password"
                tools:ignore="ContentDescription" />

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/edt_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="66dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:drawable_hide="@drawable/ic_eye_off_black_24dp"
                app:drawable_show="@drawable/ic_eye_black_24dp"
                app:additionalTouchTargetSize="75dp"
                android:ems="10"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:paddingBottom="22dp"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/masuk"
            android:theme="@style/Base.Theme.Button.Green"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/daftar"
            android:theme="@style/Base.Theme.Button.Orange"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>