<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/masukan_nama_obat"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical">
                </LinearLayout>

                <EditText
                    android:id="@+id/txtNamaObat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tulis Nama Obat disini"
                    app:layout_constraintTop_toBottomOf="@+id/txt"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/pilih_jenis_obat"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/dosisLayout"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pilihDosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rgDosis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <RadioButton
                            android:id="@+id/radioSatu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/satusehari"
                            android:textSize="24sp" />

                        <RadioButton
                            android:id="@+id/radioDua"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/duasehari"
                            android:textSize="24sp" />

                        <RadioButton
                            android:id="@+id/radioTiga"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/tigasehari"
                            android:textSize="24sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="Pilih Aturan Pakai"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rgAturanMakan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <RadioButton
                            android:id="@+id/radioSesudahMakan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/sesudah_makan"
                            android:textSize="24sp" />

                        <RadioButton
                            android:id="@+id/radioSebelumMakan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/sebelum_makan"
                            android:textSize="24sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="Pilih Warna Tempat Laci"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rgNomorLaci"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textColor="@color/red"
                            android:background="@color/red"
                            android:text="red"
                            android:textSize="24sp" />

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textColor="@color/blueyoung"
                            android:background="@color/blueyoung"
                            android:text="blue"
                            android:textSize="24sp" />

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:background="@color/black"
                            android:text="black"
                            android:textSize="24sp" />

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textColor="@color/greenold"
                            android:background="@color/greenold"
                            android:text="green"
                            android:textSize="24sp" />

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textColor="@color/yellow"
                            android:background="@color/yellow"
                            android:text="yellow"
                            android:textSize="24sp" />

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textColor="@color/brown"
                            android:background="@color/brown"
                            android:text="brown"
                            android:textSize="24sp" />

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textColor="@color/yellowgreen"
                            android:background="@color/yellowgreen"
                            android:text="yellowgreen"
                            android:textSize="24sp" />

                        <RadioButton
                            android:buttonTint="@color/white"
                            android:id="@+id/radioLaci8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:background="@color/orange"
                            android:textColor="@color/orange"
                            android:text="orange"
                            android:textSize="24sp" />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical">
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llJumlahObat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/masukan_jumlah_obat"
                        android:textColor="@color/colorPrimary"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/theme_divider"
                        android:orientation="vertical">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/txtJumlahObat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/contoh_12"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textSize="24sp"
                            tools:ignore="Autofill" />

                        <TextView
                            android:id="@+id/txtSatuan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/satuanTablet"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/theme_divider"
                        android:orientation="vertical"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/keterangan"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtKeterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tulis Keterangan Obat disini"
                    app:layout_constraintTop_toBottomOf="@+id/txt"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/theme_divider"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:theme="@style/Base.Theme.Button.Red"
                android:text="Kembali" />

            <Button
                android:id="@+id/btn_addTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:theme="@style/Base.Theme.Button.Green"
                android:text="Simpan" />
        </TableRow>
    </LinearLayout>
</LinearLayout>